# void-colosseum

./: .gitignore  CLAUDE.md  README.md  STRATEGY_GUIDE.md  agents.md  deploy.sh  publish_to_pypi.sh  pyproject.toml  railway.json  render.yaml  requirements-vercel.txt  requirements.txt  server.py  vercel.json  void_colosseum_mcp.py  void_colosseum_sdk.py  void_colosseum_v02.html
.claude/: launch.json  settings.local.json
docs/: index.html  show_hn_draft.md
docs/.well-known/: llms.txt
examples/: claude_vs_greedy.py  run_tournament.py
